--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto - api Pokemon 😎</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="text-center">Listado de Pokemones</h1>
+        <div class="filtro">
+            <p>Selecciona el total de pokemones</p>
+            <input type="number" id="filtroPokemones">
+            <button id="btnFiltrar" class="btn btn-primary">Filtrar</button>
+        </div>
+        <div id="lista">
+        </div>
+    </div>
+
+     <template id="infoPokemon">
+        <div class="alert alert-primary">
+            <p>Nombre</p>
+            <p>URL</p>
+            <button class="btn btn-dark">Mostrar</button>
+        </div>
+    </template>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
