--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
             <p>Selecciona el total de pokemones</p>
             <input type="number" id="filtroPokemones">
             <button id="btnFiltrar" class="btn btn-primary">Filtrar</button>
+            <button onclick="fetchPokemones()" class="btn btn-warning">Mostrar Todo</button>
         </div>
-        <div id="lista">
-        </div>
+        <div class="flex">
+            <div id="lista" class="col-7"></div>
+            <div id="pokemonBuscado" class="col-5"></div>
+        </div>    
     </div>
 
      <template id="infoPokemon">
@@ -26,6 +29,33 @@
             <p>URL</p>
             <button class="btn btn-dark">Mostrar</button>
         </div>
+    </template>
+
+    <template id="card">
+        <article class="card">
+            <img src="" alt="" class="card-header">
+            <div class="card-body">
+                <img src="" alt="" class="card-body-img">
+                <h1 class="card-body-title">
+                    <span>26</span>
+                </h1>
+                <p class="card-body-text"></p>
+            </div>
+            <div class="card-footer">
+                <div class="card-footer-social">
+                    <h3>80k</h3>
+                    <p>Ataque</p>
+                </div>
+                <div class="card-footer-social">
+                    <h3>80k</h3>
+                    <p>Ataque Especial</p>
+                </div>
+                <div class="card-footer-social">
+                    <h3>80k</h3>
+                    <p>Defensa</p>
+                </div>
+            </div>
+        </article>    
     </template>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
