--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     <div class="container">
         <h1 class="text-center">Listado de Pokemones</h1>
         <div class="filtro">
-            <p>Selecciona el total de pokemones</p>
-            <input type="number" id="filtroPokemones">
-            <button id="btnFiltrar" class="btn btn-primary">Filtrar</button>
-            <button onclick="fetchPokemones()" class="btn btn-warning">Mostrar Todo</button>
+            <div class="numero">
+                <p>Selecciona el total de pokemones</p>
+                <input type="number" id="filtroPokemones">
+                <button id="btnFiltrar" class="btn btn-primary">Filtrar</button>
+                <button onclick="fetchPokemones()" class="btn btn-warning">Mostrar Todo</button>
+            </div>
+            <div class="nombre">
+                <p>Búsqueda por nombre</p>
+                <input type="text" oninput="buscaPorNombre()" id="buscaNombre">
+            </div>
+            
         </div>
         <div class="flex">
             <div id="lista" class="col-7"></div>
@@ -33,7 +40,6 @@
 
     <template id="card">
         <article class="card">
-            <img src="" alt="" class="card-header">
             <div class="card-body">
                 <img src="" alt="" class="card-body-img">
                 <h1 class="card-body-title">
