Agregamos datos personales

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <div class="container">
         <h1 class="text-center">Listado de Pokemones</h1>
+        <h1 class="text-center">Jesus Gerardo Robles Cuellar</h1>
+        <h1 class="text-center">NUA: 788256</h1>
         <div class="filtro">
             <div class="numero">
                 <p>Selecciona el total de pokemones</p>
